--- a/index.html
+++ b/index.html
@@ -18,8 +18,29 @@
         </div>
     </header>
     <main>
-        <section>
+        <section class="main-exchange-container">
+            <div class="background-img">
 
+            </div>
+            <div class="main-exchange-container-title">
+                <h2>Visibilizamos todas las tasas de cambio.</h2>
+                <p>Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>
+            </div>
+            <section class="main-tables-container">
+                <div class="table-title">Monedas</div>
+                <div class="table-container">
+                    <div>Bitcoin</div>
+                    <div>$ 1.96 <span>i</span></div>
+                    <div>Ethereum</div>
+                    <div>$ 0.07 <span>i</span></div>
+                    <div>Ripple</div>
+                    <div>$ 2.15 <span>i</span></div>
+                    <div>Stella</div>
+                    <div>$ 4.96 <span>i</span></div>
+                </div>
+                    <div>Actualizado:</div>
+                    <div>19 de Julio 23:45</div>
+            </section>
         </section>
         <section>
 
